tests/paczka1/fuzzy1/97630308.err
Error in line 3: nftZB1SC A799 38,3
Error in line 5: SdwVKlF A3 29,9
Error in line 21: A980 A980 26,5
Error in line 36: SdwVKlF A980 230,41
Error in line 26: E8fOs A910 73,3
Error in line 29: YgxWLHXuBM A3 27,0
Error in line 32: SdwVKlF A980 94,7
